# bonkpu

./: .gitignore
bonkloader/: Cargo.toml  rust-toolchain.toml
bonkloader/.cargo/: config.toml
bonkloader/src/: index.html  main.rs  web.rs  wifi.rs
programs/: AddUntilCarry.asm  Fibbonachi.asm  Fibbonachi16.asm  Multiply.asm  Stack.asm  String.asm  UsePointer.asm  UseStackArg.asm
schematic/: .gitignore  Memory.kicad_sch  REG.kicad_sch  REG_16.kicad_sch  RW_REG.kicad_sch  alu.kicad_sch  areg.kicad_sch  bonkpu.kicad_pcb  bonkpu.kicad_pro  bonkpu.kicad_sch  bus_gate.kicad_sch  clock.kicad_sch  cu.kicad_sch  led_indicator.kicad_sch  led_indicator16.kicad_sch  program_counter.kicad_sch
scripts/: assembler.py  instructions.py  measure_bin.py  microcode.py  microcode_gen.py
sim/: bonkpu.circ
