[package]
name = "bonkloader"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = "0.7.0"
embassy-time = "0.4.0"
esp-backtrace = {version = "0.16.0", features = ["exception-handler", "panic-handler", "println"]}
esp-bootloader-esp-idf = "0.1.0"
esp-hal = {version = "1.0.0-beta.1", features = ["log-04", "unstable"] }
esp-hal-embassy = "0.8.1"
esp-println = {version = "0.14.0", features = ["log-04"] }

[features]
default = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6", "esp-println/esp32c6"]
