[package]
name = "bonkloader"
version = "0.0.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.0"
embassy-executor = {version = "0.7.0", features = ["task-arena-size-20480"]}
embassy-net = {version = "0.7.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"]}
embassy-time = "0.4.0"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = {version = "0.16.0", features = ["exception-handler", "panic-handler", "println"]}
esp-bootloader-esp-idf = "0.1.0"
esp-hal = {version = "1.0.0-beta.1", features = ["log-04", "unstable"] }
esp-hal-embassy = "0.8.1"
esp-println = {version = "0.14.0", features = ["log-04"] }
esp-wifi = {version = "0.14.1", features = ["log-04", "wifi"]}
picoserve = {version = "0.16.0", features = ["embassy"]}
smoltcp = { version = "0.12.0", default-features = false, features = [ "medium-ethernet", "socket-raw", "proto-ipv4"] }
static_cell = "2.1.0"

[features]
default = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6", "esp-println/esp32c6",  "esp-wifi/esp32c6"]
